monitoring/uptime-kuma/service.yml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-service
  namespace: monitoring
spec:
  selector:
    app: uptime-kuma
  ports:
  - name: uptime-kuma
    port: 3001
