monitoring/uptime-kuma/ingressroute.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma-ingress
  namespace: monitoring
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`status.unrelated.family`)
      kind: Rule
      services:
        - name: uptime-kuma
          port: 3001
  tls:
    secretName:  unrelated-family-tls
